# rowheel

./: Cargo.toml  LICENSE  PKGBUILD  README.md  install.sh  uninstall.sh
.github/workflows/: release.yml  windowsrelease.yml
src/: app.rs  calibration.rs  config.rs  main.rs
src/force_feedback/: directinput_ffi.rs  linux.rs  mod.rs  windows.rs
src/input/: evdev_reader.rs  mod.rs  reader.rs
src/virtual_controller/: linux.rs  mod.rs  uinput_ffi.rs  windows.rs
