[package]
name = "rowheel"
version = "0.1.0"
edition = "2021"
description = "Emulate Xbox controllers through DirectInput devices like steering wheels"

[dependencies]
# UI
eframe = "0.33"
egui = "0.33"

# Input handling
gilrs = "0.11.1"

# Serialization for config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async/threading
crossbeam-channel = "0.5"

[target.'cfg(windows)'.dependencies]
vigem-client = { version = "0.1", features = ["unstable_xtarget_notification"] }
windows = { version = "0.62.0", features = [
    "Win32_Foundation",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]}

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.2"
libudev = "0.3.0"
nix = { version = "0.29", features = ["ioctl"] }
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
